--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,9 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title><%= @title %></title>
+<title><%= title %></title>
   <%= csrf_meta_tags %>
-
     <%= render 'layouts/stylesheets'  %>
   </head>
   <body>
